--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/papaparse": "^5.2.2",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "commitizen": "^4.2.1",
+    "cz-conventional-changelog": "^3.3.0",
     "lodash": "^4.17.20",
     "papaparse": "^5.3.0",
     "react": "^16.13.1",
@@ -24,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "commit": "npx cz"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
