--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "@types/papaparse": "^5.2.2",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "add": "2.0.6",
     "commitizen": "^4.2.1",
     "cz-conventional-changelog": "^3.3.0",
     "lodash": "^4.17.20",
     "papaparse": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.0",
     "rsuite": "^4.8.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "yarn": "1.22.10"
   },
   "scripts": {
     "predeploy": "yarn build",
