--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "@types/node": "^12.0.0",
     "@types/papaparse": "^5.2.2",
     "@types/react": "^16.9.0",
+    "@types/react-autosuggest": "^10.0.1",
     "@types/react-dom": "^16.9.0",
+    "@types/react-select": "^3.0.23",
     "add": "2.0.6",
+    "antd": "^4.7.3",
     "commitizen": "^4.2.1",
     "cz-conventional-changelog": "^3.3.0",
+    "fuse.js": "^6.4.3",
     "lodash": "^4.17.20",
     "papaparse": "^5.3.0",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.0.3",
     "react-dom": "^16.13.1",
     "react-scripts": "4.0.0",
+    "react-select": "^3.1.0",
     "rsuite": "^4.8.1",
     "typescript": "^4.0.2",
     "yarn": "1.22.10"
@@ -54,6 +60,10 @@
     }
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "ahooks": "^2.8.0",
+    "gh-pages": "^3.1.0",
+    "react-blocks": "^1.1.4",
+    "react-copy-to-clipboard": "^5.0.2",
+    "typewiz-core": "^1.2.4"
   }
 }
