--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "noFallthroughCasesInSwitch": true,
+    "incremental": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
